--- a/part1.html
+++ b/part1.html
@@ -37,7 +37,7 @@
       #Three{
         width: 47%;
     margin-top: -25%;
-    margin-left: 6%;
+    margin-left: 3%;
       }
 
         /* #buttonContainer {
@@ -216,7 +216,7 @@
         <video id="mainVideo" autoplay loop muted style="    width: 100%;
         max-width: 841px;
         margin-top: 18px;
-        margin-left: 6%;">
+        margin-left: 3%;">
             <source src="./newimage/partsimage/1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
@@ -228,14 +228,20 @@
         <img src="./newimage/partsimage/text1.png" alt="Image 2" style="    width: 100%;
         max-width: 1165px;
         margin-bottom: 3%;
-        margin-left: 6%;">
-        <img id="text2" src="./newimage/partsimage/text2.png" alt="Image 2" style="width: 100%; max-width: 548px; margin-top: 3%; margin-left: 69%; position: absolute; z-index: 1;">
-        <img id="text3" src="./newimage/partsimage/text3.png" alt="Image 3" style="    width: 100%;
+        margin-left: 3%;
+        ">
+        <img id="text2" src="./newimage/partsimage/text2.png" alt="Image 2" style="    width: 48%;
+        max-width: 100%;
+        margin-top: -1%;
+        margin-left: 50%;
+        position: fixed;
+        z-index: 1;">
+        <!-- <img id="text3" src="./newimage/partsimage/text3.png" alt="Image 3" style="    width: 100%;
         max-width: 327px;
-        margin-top: -6%;
+        margin-top: -13%;
         margin-left: 52%;
         position: absolute;
-        z-index: 1;">
+        z-index: 1;"> -->
         <img src="./newimage/partsimage/Together, we power ahead..png" alt="Image 1" style="        width: 19%;
         max-width: 820px;
         margin-top: -5%;
