--- a/page2.html
+++ b/page2.html
@@ -88,6 +88,7 @@
         }
 
         #buttonContainer {
+            margin-top: 10%;
             grid-area: buttons;
             margin-right: 120px;
             margin-left: 120px;
