--- a/page4.html
+++ b/page4.html
@@ -25,7 +25,7 @@ body {
     justify-content: center;
     height: 100vh;
     overflow: hidden;
-    background-image: url('./newimage/BG.png');
+    background-image: url('./newimage/serviceimage/servicebg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
@@ -46,7 +46,7 @@ body {
 #buttonContainer {
     margin-right: 10%;
     margin-left: 11%;
-    margin-bottom: -7%;
+    margin-bottom: -12%;
     grid-area: buttons;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -71,7 +71,7 @@ body {
 .imageLink img,
 .imageBelowButtons img {
     box-sizing: border-box;
-    width: 100%;
+    width: 76%;
     height: auto;
     border: 0;
     border-top-right-radius: 30px;
